# Conflicts: #	core/src/mindustry/mod/ClassMap.java