@@ -196,12 +196,7 @@ allprojects{
 
     tasks.withType(JavaCompile){
         targetCompatibility = 8
-        //TODO fix dynamically, this is a hack
-        if(System.getProperty("user.name") == "anuke"){
-            sourceCompatibility = JavaVersion.VERSION_15
-        }else{
-            sourceCompatibility = JavaVersion.VERSION_14
-        }
+        sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
         dependsOn clearCache
@@ -224,18 +219,13 @@ configure(project(":annotations")){
 //compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")){
     tasks.withType(JavaCompile){
-        options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-
-        doFirst{
-            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
-        }
+        options.compilerArgs.addAll(['--release', '8'])
     }
 
     tasks.withType(Javadoc){
         options{
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '14')
+            addStringOption('-release', '16')
         }
     }
 }
@@ -302,9 +292,8 @@ project(":core"){
 
     kapt{
         javacOptions{
-            option("-source", "14")
+            option("-source", "16")
             option("-target", "1.8")
-            option("--enable-preview")
         }
     }
 
@@ -430,6 +419,8 @@ project(":tests"){
     }
 
     test{
+        //fork every test so mods don't interact with each other
+        forkEvery = 1
         useJUnitPlatform()
         workingDir = new File("../core/assets")
         testLogging{
